# Haskellbasics

./: Apply.md  Database.hs  Nix-conf.md  Nova.md  Pitch.md  Playground-spec.md  README.md  Vertex.md  excel.md  issue.md  product-register.hs
Tasks/: Always.hs  EBU.md  Es-validator.hs  Flake.nix  Functions.hs  Hk.md  Plutus.md  Shell.nix  Validator.md  Yield.hs
Tasks/plutus/: yield.cabal  yield.hs
mini-marathon/: Chapter11.hs  Chapter9.hs  chapter 1 tasks.hs  chapter 17.hs  chapter 3 tasks.hs  chapter 4 tasks.hs  chapter 6 tasks.hs  chapter10.hs  chapter12.hs  chapter13  chapter15.hs  chapter16.hs  chapter18.hs  chapter19.hs  chapter20.hs  chapter21.hs  chapter7.hs  chapter8.hs  conditions  pattern-matching
mini-marathons/: Lists.hs  Marathon.hs  Module.hs  Product-List-Manager.hs  Task_Processor.hs  config_sys.hs  logging.hs  monad.hs
mock-cardano/: Domain.md  Multisigs.hs  Test-cases.hs  community-pool.cbor  delivery.cbor  delivery.hs  escrow-deadline.cbor  escrow-deadline.hs  land-reg-validator.hs  micro-contract.cbor  mock-CIP143.hs  mock-Dex.hs  mock-blockchain.hs  mock-compiler.hs  mock-onchain-governance.hs  package.yaml
pages/: contact.html  trust-safety.html
