executable yield-exe
    main-is:            Yield-Sharing.hs
    hs-source-dirs:     tests
    build-depends:
        base >=4.14 && <5,
        plutus-ledger-api,
        plutus-tx,
        plutus-tx-plugin,
        bytestring,
        base16-bytestring,
        serialise,
        text,
        containers,
        cardano-api,
        cardano-ledger-core,
        cardano-ledger-shelley
    default-language:   Haskell2010
